Finished media queries and squash minor bugs

--- a/assets/css/_media-queries.styl
+++ b/assets/css/_media-queries.styl
@@ -3,18 +3,22 @@ mobile()
   @media screen and (max-width: 640px)
     {block}
 
-tablet()
+mobile-landscape()
   @media screen and (min-width: 641px) and (max-width: 800px)
     {block}
 
-desktop()
+tablet()
   @media screen and (min-width: 801px) and (max-width: 1200px)
     {block}
 
-desktop-hd()
+desktop()
   @media screen and (min-width: 1201px) and (max-width: 1400px)
     {block}
 
+desktop-hd()
+  @media screen and (min-width: 1401px) and (max-width: 1800px)
+    {block}
+
 desktop-fullhd()
-  @media screen and (min-width: 1401px)
+  @media screen and (min-width: 1801px)
     {block}
